Primera Versión - correcion de etiquetas ol

--- a/TopicosAvanzados19A/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/index.html
@@ -13,15 +13,15 @@ and open the template in the editor.
     <body>
         <div>Página de Prueba:</div>
         
-    <li>
-        <ol>MTI. MELQUIZEDEC MOO MEDINA</ol>
-        <ol>Jonathan Euan Sanchez</ol>
-        <ol></ol>
-        <ol></ol>
-        <ol></ol>
-        <ol></ol>
-        <ol></ol>
-        <ol></ol>
-    </li>
+    <ol>
+        <li>MTI. MELQUIZEDEC MOO MEDINA</li>
+        <li>Jonathan Euan Sanchez</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
     </body>
 </html>
