--- a/TopicosAvanzados19A/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
     <ol>
         <li>MTI. MELQUIZEDEC MOO MEDINA</li>
         <li>Jonathan Euan Sanchez</li>
-        <li></li>
+        <li>Pedro Sánchez Cárdenas</li>
         <li></li>
         <li></li>
         <li></li>
