--- a/TopicosAvanzados19A/public_html/KennAyala/MiPagina.html
+++ b/TopicosAvanzados19A/public_html/KennAyala/MiPagina.html
@@ -5,7 +5,7 @@
 
   <script></script> <!-- código directo -->
   <script type='text/javascript'></script> <!-- especificando-->
-  <script type='text/javascript' src='codigo.js'></script> <!-- llamando archivo-->
+  <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando archivo-->
 </head>
 HolaMundo
 <body>
