--- a/TopicosAvanzados19A/public_html/KennAyala/MiPagina.html
+++ b/TopicosAvanzados19A/public_html/KennAyala/MiPagina.html
@@ -3,8 +3,8 @@
 <head>
   <title>PagJS</title>
 
-  <script></script> <!-- código directo -->
-  <script type='text/javascript'></script> <!-- especificando-->
+  <script>alert("HolaMundo desde SCript")</script> <!-- código directo -->
+  <script type='text/javascript'>alert("HolaMundo desde TYPE")</script> <!-- especificando-->
   <script type='text/javascript' src='codigoJS.js'></script> <!-- llamando archivo-->
 </head>
 HolaMundo
