Agrego mi carpeta

--- a/TopicosAvanzados19A/public_html/pedro/Index.html
+++ b/TopicosAvanzados19A/public_html/pedro/Index.html
@@ -11,17 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Página de Prueba:</div>
-
-    <ol>
-        <li>MTI. MELQUIZEDEC MOO MEDINA</li>
-        <li>Jonathan Euan Sanchez</li>
-        <li>Kenn Ayala Valladares</li>
-        <li>Pedro Sánchez Cárdenas</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ol>
+        <div>TODO write content</div>
     </body>
 </html>
