--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Index.html
@@ -6,11 +6,10 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Primera Página Web</title>
+
     </head>
     <body>
-        <div>TODO write content</div>
+        Mi pagina web pedro sanchez
     </body>
 </html>
