--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Index.html
@@ -8,8 +8,12 @@ and open the template in the editor.
     <head>
         <title>Primera Página Web</title>
 
+        <script src ="MiCodigo.js"></script>
+
     </head>
+    
     <body>
-        Mi pagina web pedro sanchez
+    <center><h1>Pedro Sanchez Cárdenas</h1></center>
+    <textarea>nuestra historia de amor</textarea>
     </body>
 </html>
