--- a/TopicosAvanzados19A/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
         <li>Jonathan Euan Sanchez</li>
         <li>Kenn Ayala Valladares</li>
         <li>Pedro Sánchez Cárdenas</li>
-        <li></li>
+        <li>Rodrigo Enrique Diaz Serviran</li>
         <li></li>
         <li></li>
         <li></li>
