Nombres de Francisco y Jesus

--- a/TopicosAvanzados19A/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/index.html
@@ -19,8 +19,8 @@ and open the template in the editor.
         <li>Kenn Ayala Valladares</li>
         <li>Pedro Sánchez Cárdenas</li>
         <li>Rodrigo Enrique Diaz Serviran</li>
-        <li></li>
-        <li></li>
+        <li>Jesus Alberto Lira Romero</li>
+        <li>Francisco Montalvo Hidalgo</li>
         <li></li>
         <li></li>
         <li></li>
