--- a/TopicosAvanzados19A/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
         <li>Rodrigo Enrique Diaz Serviran</li>
         <li>Jesus Alberto Lira Romero</li>
         <li>Francisco Montalvo Hidalgo</li>
-        <li></li>
+        <li>Cosme Alberto Magaña Camara</li>
         <li></li>
         <li></li>
         <li></li>
