--- a/TopicosAvanzados19A/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/index.html
@@ -23,8 +23,8 @@ and open the template in the editor.
         <li>Francisco Montalvo Hidalgo</li>
         <li>Cosme Alberto Magaña Camara</li>
         <li>Voltar Ramon Omar de Jesus Mezquita Correa</li>
-        <li></li>
-        <li></li>
+        <li>Clauded casanova figueroa</li>
+        <li>Karen janett lopez losano</li>
         <li></li>
         <li></li>
         <li></li>
