--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Programa03.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Programa03.html
@@ -17,8 +17,11 @@
           <div id="divFormulario"> <!--Formulario-->
             <form>
                 <input name="inputUserName" id="inputUserName" type="text" size="20" placeholder="Inserta Texto">
-                <input type="radio" value="1"> chocolate <br>
-                <input type="submit">
+                <input name="radio1" type="radio" value="1"> Chocolate <br>
+                <input name="radio2" type="radio" value="1"> Pastel <br>
+                <input name="radio3" type="radio" value="1"> Condones <br>
+                <input name="radio4" type="radio" value="1"> Sexo <br>
+                <input type="submit" value="Enviar Informacion">
             </form>
           </div>
       </div>
