--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
@@ -9,10 +9,24 @@
       </div>
       <div id="divContenedor">
         <div id="divFormulario">
+          <!--formulario-->
           <form>
-            <input type="text"/>
-            <input type="radio"/>
-            <input type="submit"/>
+            <input name="inputUsername" id="inputUsername" type="text" size="15" placeholder="Ejemplo: MikeSan"/>
+            <br>
+            <input name="inputRadio1" id="inputRadio1" type="radio1" value="1"> Chocolate<br>
+            <input name="inputRadio2" id="inputRadio2" value="2"> Pastel<br>
+            <input name="inputRadio3" id="inputRadio3" value="3"> Abrazos<br>
+            <input name="inputRadio4" id="inputRadio4" value="4"> No Balazos<br>
+
+            <input type="number" min="1" max="20"/><br>
+            <input type="date"/><br>
+            <input type="email" size="24" placeholder="Ejemplo: user@hotmail.com"/><br>
+            <input type="color"/><br>
+            <input type="file"/><br>
+            <input type="password" placeholder="Ingrese contraseña"/><br>
+            <input type="search" placeholder="Ingrese para buscar"/><br>
+
+            <input name="inputSubmit" id="inputSubmit" type="submit" value="Enviar información"/>
           </form>
         </div>
       </div>
