--- a/TopicosAvanzados19A/public_html/FrankMontalvo/Programa03.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/Programa03.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title></title>
   </head>
-  
+
   <body>
 
       <div id="divEncabezado">
@@ -21,7 +21,15 @@
                 <input name="radio2" type="radio" value="1"> Pastel <br>
                 <input name="radio3" type="radio" value="1"> Condones <br>
                 <input name="radio4" type="radio" value="1"> Sexo <br>
-                <input type="submit" value="Enviar Informacion">
+                <input type="submit" value="Enviar Informacion"><br>
+                <input type="number"><br>
+                <input type="date"><br>
+                <input type="email"><br>
+                <input type="color"><br>
+                <input type="file"><br>
+                <input type="password"><br>
+                <input type="search"><br>
+
             </form>
           </div>
       </div>
