--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Programa03.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Programa03.html
@@ -16,12 +16,21 @@
       <div id="divContenedor">
           <div id="divFormulario"> <!--Formulario-->
             <form>
-                <input name="inputUserName" id="inputUserName" type="text" size="20" placeholder="Inserta Texto">
-                <input name="radio1" type="radio" value="1"> Chocolate <br>
-                <input name="radio2" type="radio" value="1"> Pastel <br>
-                <input name="radio3" type="radio" value="1"> Condones <br>
-                <input name="radio4" type="radio" value="1"> Sexo <br>
-                <input type="submit" value="Enviar Informacion">
+                <input name="inputUserName" id="inputUserName" type="text" size="20" placeholder="Inserta Texto"><br>
+                <input name="radio1" id="radio1" type="radio" value="1"> Chocolate <br>
+                <input name="radio2" id="radio2" type="radio" value="1"> Pastel <br>
+                <input name="radio3" id="radio3" type="radio" value="1"> Condones <br>
+                <input name="radio4" id="radio4" type="radio" value="1"> Sexo <br>
+
+                <input type="number" name="" value=""><br>
+                <input type="date" name="" value=""><br>
+                <input type="email" name="" value=""><br>
+                <input type="color" name="" value=""><br>
+                <input type="file" name="" value=""><br>
+                <input type="password" name="" value=""><br>
+                <input type="search" name="" value=""><br>
+
+                <input type="submit" value="Enviar Informacion" id="submit">
             </form>
           </div>
       </div>
