--- a/TopicosAvanzados19A/public_html/FrankMontalvo/Programa03.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/Programa03.html
@@ -4,6 +4,7 @@
   -->
 <html lang="en" dir="ltr">
   <head>
+
     <meta charset="utf-8">
     <title></title>
   </head>
@@ -12,10 +13,10 @@
 
       <div id="divEncabezado">
       </div>
-
+      
       <div id="divContenedor">
           <div id="divFormulario"> <!--Formulario-->
-            <form>
+            <form class="form-inline">
                 <input name="inputUserName" id="inputUserName" type="text" size="20" placeholder="Inserta Texto"><br>
                 <input name="radio1" type="radio" value="1"> Chocolate <br>
                 <input name="radio2" type="radio" value="1"> Pastel <br>
