actualizacion codigo programa03

--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
@@ -1,7 +1,11 @@
+<!--Programa03.html
+Interfaces y Formularios
+14 de Febrero del 2019-->
 <html>
   <head>
+    <title>Todo supply a little</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device">
+    <meta name="viewport" content="width=device-width", initial scale="">
   </head>
   <body>
       <div id="divEncabezado">
@@ -10,7 +14,7 @@
       <div id="divContenedor">
         <div id="divFormulario">
           <!--formulario-->
-          <form>
+          <form class="for-inLine">
             <input name="inputUsername" id="inputUsername" type="text" size="15" placeholder="Ejemplo: MikeSan"/>
             <br>
             <input name="inputRadio1" id="inputRadio1" type="radio1" value="1"> Chocolate<br>
@@ -18,7 +22,7 @@
             <input name="inputRadio3" id="inputRadio3" value="3"> Abrazos<br>
             <input name="inputRadio4" id="inputRadio4" value="4"> No Balazos<br>
 
-            <input type="number" min="1" max="20"/><br>
+            <input type="number" min="1" max="20" /><br>
             <input type="date"/><br>
             <input type="email" size="24" placeholder="Ejemplo: user@hotmail.com"/><br>
             <input type="color"/><br>
@@ -33,3 +37,6 @@
       <div id="divPie">
 
       </div>
+    </body>
+
+</html>
