--- a/TopicosAvanzados19A/public_html/MelquizedecMoo/Programm03.html
+++ b/TopicosAvanzados19A/public_html/MelquizedecMoo/Programm03.html
@@ -23,7 +23,7 @@ Date:           14 de Febrero de 2019
             <div id="divFormulario">
                 <!-- Formulario -->
                 <form class="form-signin">
-                    <div class="form-group">
+                    <div class="form-group">-
                         <label class="control-label col-sm-2" for="inputUsername">User:</label>    
                         <div class="col-sm-10">
                             <input class="form-control" name="inputUsername" id="inputUsername" type="text" placeholder="Ejemplo: Mickey" />
