--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
@@ -15,6 +15,8 @@ Interfaces y Formularios
         <div id="divFormulario">
           <!--formulario-->
           <form class="for-inLine">
+            <label class="control-label col-sm-2" for="inputUsername">User:</labe> 
+              <!--Para usar con bootstrap-->
             <input name="inputUsername" id="inputUsername" type="text" size="15" placeholder="Ejemplo: MikeSan"/>
             <br>
             <input name="inputRadio1" id="inputRadio1" type="radio1" value="1"> Chocolate<br>
