--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Program03/index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Program03/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
-Sours:          
-Description:
+Sours:          Programa03.html
+Description:    Interfaces de formularios
 Date:           14/Febrero/2019
 -->
 <html>
@@ -23,6 +23,7 @@ Date:           14/Febrero/2019
         <div id = "divContainer">
             <div id = "divForm">
                 <form class="form-singin">
+                    
                     <input name="inputUsername" id = "inputUsername" type="text" size="20" placeholder="Ejemplo: Mickey" /><br>
                     
                     <input id = "radio1" name ="radio1" type="radio" value="1"> Chocolate<br>
