--- a/TopicosAvanzados19A/public_html/KennAyala/Programa04/indexplantilla.html
+++ b/TopicosAvanzados19A/public_html/KennAyala/Programa04/indexplantilla.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
@@ -40,7 +40,7 @@
   <div class="row content">
     <div class="col-sm-3 sidenav">
       <h4>John's Blog</h4>
-      <ul class="nav nav-pills nav-stacked">
+      <ul class="nav nav-pills nav-stacked" onmouseover="alert('MouseOver');">
         <li class="active"><a href="#section1">Home</a></li>
         <li><a href="#section2">Friends</a></li>
         <li><a href="#section3">Family</a></li>
@@ -58,6 +58,7 @@
 
     <div class="col-sm-9">
       <h4><small>RECENT POSTS</small></h4>
+      <input type="text" onfocus="alert('Entraste aquí');"></input>
       <hr>
       <h2>I Love Food</h2>
       <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
