actualizacion programa03 creacion programa04

--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
@@ -3,10 +3,17 @@ Interfaces y Formularios
 14 de Febrero del 2019-->
 <html>
   <head>
-    <title>Todo supply a little</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial scale="">
+
+
+    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
+          <script src="bootstrap-4.3.1-dist/js/bootstrap.min.js" type="text/javascript"></script>
+
+
+  <title>Todo supply a little</title>
   </head>
+
   <body>
       <div id="divEncabezado">
 
@@ -15,7 +22,7 @@ Interfaces y Formularios
         <div id="divFormulario">
           <!--formulario-->
           <form class="for-inLine">
-            <label class="control-label col-sm-2" for="inputUsername">User:</labe> 
+            <label class="control-label col-sm-2" for="inputUsername">User:</labe>
               <!--Para usar con bootstrap-->
             <input name="inputUsername" id="inputUsername" type="text" size="15" placeholder="Ejemplo: MikeSan"/>
             <br>
