--- a/TopicosAvanzados19A/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/index.html
@@ -23,7 +23,7 @@ and open the template in the editor.
         <li>Francisco Montalvo Hidalgo</li>
         <li>Cosme Alberto Magaña Camara</li>
         <li>Juan Pablo Mezquita Uc</li>
-        <li></li>
+        <li>Voltar Ramon Omar de Jesus MMezquita Correa</li>
         <li></li>
         <li></li>
         <li></li>
