--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa03.html
@@ -2,50 +2,51 @@
 Interfaces y Formularios
 14 de Febrero del 2019-->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial scale="">
+    <head>
+        <link href="bootstrap-4.1.3/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="bootstrap-4.1.3/dist/js/bootstrap.min.js" type="text/javascript"></script>
 
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
-          <script src="bootstrap-4.3.1-dist/js/bootstrap.min.js" type="text/javascript"></script>
-
-
-  <title>Todo supply a little</title>
   </head>
-
   <body>
-      <div id="divEncabezado">
+    <div id="divEncabezado">
 
-      </div>
-      <div id="divContenedor">
+    </div>
+    <div id="divContenedor">
         <div id="divFormulario">
           <!--formulario-->
-          <form class="for-inLine">
-            <label class="control-label col-sm-2" for="inputUsername">User:</labe>
-              <!--Para usar con bootstrap-->
-            <input name="inputUsername" id="inputUsername" type="text" size="15" placeholder="Ejemplo: MikeSan"/>
-            <br>
-            <input name="inputRadio1" id="inputRadio1" type="radio1" value="1"> Chocolate<br>
-            <input name="inputRadio2" id="inputRadio2" value="2"> Pastel<br>
-            <input name="inputRadio3" id="inputRadio3" value="3"> Abrazos<br>
-            <input name="inputRadio4" id="inputRadio4" value="4"> No Balazos<br>
-
-            <input type="number" min="1" max="20" /><br>
-            <input type="date"/><br>
-            <input type="email" size="24" placeholder="Ejemplo: user@hotmail.com"/><br>
+          <form class="form-signin">
+              <div class="form-group">-
+                  <label class="control-label col-sm-2" for="inputUsername">User:</label>
+              <div class="col-sm-10">
+                  <input class="form-control" name="inputUsername" id="inputUsername" type="text" placeholder="Ejemplo: Mickey" />
+              </div>
+            <input name="inputRadio1" id="inputRadio1" type="radio" value="1">Chocolates <br>
+            <input name="inputRadio2" id="inputRadio2" type="radio" value="2">Paletas <br>
+            <input name="inputRadio3" id="inputRadio3" type="radio" value="3">Pastel <br>
+            <input name="inputRadio4" id="inputRadio4" type="radio" value="4">Abrazos <br>
+            <input type="number" min="1" max="100" size="20" placeholder="Ingrese un número"/><br>
+            <input type="date" /><br>
+            <input type="email" size="20" placeholder="Ingrese su email" /><br>
             <input type="color"/><br>
             <input type="file"/><br>
-            <input type="password" placeholder="Ingrese contraseña"/><br>
-            <input type="search" placeholder="Ingrese para buscar"/><br>
-
-            <input name="inputSubmit" id="inputSubmit" type="submit" value="Enviar información"/>
-          </form>
-        </div>
+            <input type="password"size="20" placeholder="Ingrese una contraseña"/><br>
+            <input type="search" size="20" placeholder="Buscar" /><br>
+            <input name="inputSubmit" id="inputSubmit" type="submit" value="Enviar Información" />
+          </div>
+        </form>
       </div>
-      <div id="divPie">
+    <div id="divPie">
 
-      </div>
+  </div>
+
+
+
+
+
+
     </body>
-
 </html>
