--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa02.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa02.html
@@ -1,6 +1,19 @@
 <html>
-  <head>
-    <script type="text/javascript" src="programa02.js">
-    </script>
-  </head>
+    <head>
+        <title> PROMEDIOS CALIFICACIONES </title>
+
+
+        <script type='text/javascript' src='program02.js'></script>
+
+    </head>
+    <body>
+        <div id="divGrupo">
+            <form>
+                <input type="number" id="inputGrupo" min="1" max="100">
+                <button id="buttonGrupo" onclick="leerCalificaciones()">Agregar</button>
+            </form>
+        </div>
+    </body>
+
+
 </html>
