--- a/TopicosAvanzados19A/public_html/JonathanEuan/Programa04/Index.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/Programa04/Index.html
@@ -1,43 +1,42 @@
-<Doctype
-
-
 <html>
-  <head>
+    <head>
 
-    <meta charset="utf-8">
+        <title>TODO supply a title</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="nav-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="">Inicio</a>
+                </div>
+                <div class="collapse navbar-collapse" id="navCollapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="www.google.com">Control Escolar</a></li>
+                        <li><a href="www.google.com">Alumnos</a></li>
+                        <li><a href="www.google.com">Maestros</a></li>
+                        <li><a href="www.google.com">Calificaciones</a></li>
+                        <li><a href="www.google.com">Horarios</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
- <meta name="viewport" content="width=device-width, initial-scale=1">
 
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-  <title>TODO supply a title</title>
-  </head>
-  <body onload="alert('Bienvenido');">
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="nav-header">
-          <button type="button" class="navbar-toggler" data-toogle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="">Inicio</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navCollapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="wwww.google.com">Control Escolar</a></li>
-            <li><a href="wwww.google.com">Alumnos</a></li>
-            <li><a href="wwww.google.com">Meastros</a></li>
-            <li><a href="wwww.google.com">Horarios</a></li>
-            <li><a href="wwww.google.com">Calificaciones</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div>  </div>
-    <div> </div>
-    <div> </div>
-  </body>
+        <div></div>
+        <div></div>
+        <div></div>
+
+    </body>
 </html>
