--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Course</title>
+<title>Colegio del Mayab A.C.</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Course Project">
@@ -25,8 +25,8 @@
 			<!-- Logo -->
 			<div class="logo_container">
 				<div class="logo">
-					<img src="images/logo.png" alt="">
-					<span>course</span>
+					<img src="images/logo1.png" alt="">
+					<span>Colegio del Mayab A.C.</span>
 				</div>
 			</div>
 
@@ -34,8 +34,8 @@
 			<nav class="main_nav_container">
 				<div class="main_nav">
 					<ul class="main_nav_list">
-						<li class="main_nav_item"><a href="#">home</a></li>
-						<li class="main_nav_item"><a href="#">about us</a></li>
+						<li class="main_nav_item"><a href="#">Inicio</a></li>
+						<li class="main_nav_item"><a href="#">Acerca de nosotros</a></li>
 						<li class="main_nav_item"><a href="courses.html">courses</a></li>
 						<li class="main_nav_item"><a href="elements.html">elements</a></li>
 						<li class="main_nav_item"><a href="news.html">news</a></li>
@@ -108,7 +108,7 @@
 					<div class="hero_slide_background" style="background-image:url(images/slider_background.jpg)"></div>
 					<div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
 						<div class="hero_slide_content text-center">
-							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut">Frank  <span>Es</span> PUTO</h1>
+							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span>Lira se la come</span></h1>
 						</div>
 					</div>
 				</div>
