--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -46,7 +46,7 @@
 		</div>
 		<div class="header_side d-flex flex-row justify-content-center align-items-center">
 			<img src="images/phone-call.svg" alt="">
-			<span>+43 4566 7788 2457</span>
+			<span>923 5614 - 924 9170</span>
 		</div>
 
 		<!-- Hamburger -->
@@ -519,7 +519,7 @@
 	<footer class="footer">
 		<div class="container">
 
-			
+
 
 				<div class="row">
 					<div class="col text-center">
