Plantilla principal actualizada

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -108,11 +108,7 @@
 					<div class="hero_slide_background" style="background-image:url(images/slider_background.jpg)"></div>
 					<div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
 						<div class="hero_slide_content text-center">
-<<<<<<< HEAD
-							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span>Lira se la come</span></h1>
-=======
-							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut">Colegio  <span>del</span> Mayab</h1>
->>>>>>> c42c6d9cab3942c6107388c9981a10b84de66656
+							<h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut"><span>Educación Adventista</span></h1>
 						</div>
 					</div>
 				</div>
@@ -139,8 +135,8 @@
 
 			</div>
 
-			<div class="hero_slider_left hero_slider_nav trans_200"><span class="trans_200">prev</span></div>
-			<div class="hero_slider_right hero_slider_nav trans_200"><span class="trans_200">next</span></div>
+			<div class="hero_slider_left hero_slider_nav trans_200"><span class="trans_200">Anterior</span></div>
+			<div class="hero_slider_right hero_slider_nav trans_200"><span class="trans_200">Siguiente</span></div>
 		</div>
 
 	</div>
@@ -519,7 +515,7 @@
 	<footer class="footer">
 		<div class="container">
 
-			
+
 
 				<div class="row">
 					<div class="col text-center">
