--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -564,17 +564,17 @@
 						</div>
 					</div>
 
-					<!-- Footer Column - Usefull Links -->
+					<!-- Footer Column - Enlaces eternos -->
 
 					<div class="col-lg-3 footer_col">
-						<div class="footer_column_title">Usefull Links</div>
+						<div class="footer_column_title">Enlaces Externos</div>
 						<div class="footer_column_content">
 							<ul>
 								<li class="footer_list_item"><a href="#">Testimonials</a></li>
-								<li class="footer_list_item"><a href="#">FAQ</a></li>
-								<li class="footer_list_item"><a href="#">Community</a></li>
-								<li class="footer_list_item"><a href="#">Campus Pictures</a></li>
-								<li class="footer_list_item"><a href="#">Tuitions</a></li>
+								<li class="footer_list_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs">Facebook</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 1</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 2</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 3</a></li>
 							</ul>
 						</div>
 					</div>
