--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -540,8 +540,8 @@
 						<!-- Logo -->
 						<div class="logo_container">
 							<div class="logo">
-								<img src="images/logo.png" alt="">
-								<span>course</span>
+								<img src="images/logo1.png" alt="">
+								<span>Colegio del Mayab A.C.</span>
 							</div>
 						</div>
 
