--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -35,7 +35,7 @@
 				<div class="main_nav">
 					<ul class="main_nav_list">
 						<li class="main_nav_item"><a href="#">Inicio</a></li>
-						<li class="main_nav_item"><a href="#">Acerca de nosotros</a></li>
+						<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 						<li class="main_nav_item"><a href="courses.html">courses</a></li>
 					</ul>
 				</div>
@@ -147,7 +147,7 @@
 						<div class="hero_box d-flex flex-row align-items-center justify-content-start">
 							<img src="images/earth-globe.svg" class="svg" alt="">
 							<div class="hero_box_content">
-								<h2 class="hero_box_title">Online Courses</h2>
+								<h2 class="hero_box_title">Inscripciones</h2>
 								<a href="courses.html" class="hero_box_link">view more</a>
 							</div>
 						</div>
@@ -167,7 +167,7 @@
 						<div class="hero_box d-flex flex-row align-items-center justify-content-start">
 							<img src="images/professor.svg" class="svg" alt="">
 							<div class="hero_box_content">
-								<h2 class="hero_box_title">Our Teachers</h2>
+								<h2 class="hero_box_title">Profesores</h2>
 								<a href="teachers.html" class="hero_box_link">view more</a>
 							</div>
 						</div>
@@ -570,7 +570,6 @@
 						<div class="footer_column_title">Enlaces Externos</div>
 						<div class="footer_column_content">
 							<ul>
-								<li class="footer_list_item"><a href="#">Testimonials</a></li>
 								<li class="footer_list_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs">Facebook</a></li>
 								<li class="footer_list_item"><a href="#">Espacio 1</a></li>
 								<li class="footer_list_item"><a href="#">Espacio 2</a></li>
