--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/teachers.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/teachers.html
@@ -309,7 +309,7 @@
 					<div class="become_title">
 						<h1>Become a teacher</h1>
 					</div>
-					<p class="become_text">In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor fermentum. Etiam eu purus nec eros varius luctus. Praesent finibus risus facilisis ultricies venenatis. Suspendisse fermentum sodales lacus, lacinia gravida elit dapibus sed. Cras in lectus elit. Maecenas tempus nunc vitae mi egestas venenatis. Aliquam rhoncus, purus in vehicula porttitor, lacus ante consequat purus, id elementum enim purus nec enim. In sed odio rhoncus, tristique ipsum id, pharetra neque.</p>
+					<p class="become_text"></p>
 					<div class="become_button text-center trans_200">
 						<a href="#">Read More</a>
 					</div>
@@ -394,14 +394,14 @@
 					<!-- Footer Column - Usefull Links -->
 
 					<div class="col-lg-3 footer_col">
-						<div class="footer_column_title">Usefull Links</div>
+						<div class="footer_column_title">Enlaces Externos</div>
 						<div class="footer_column_content">
 							<ul>
 								<li class="footer_list_item"><a href="#">Testimonials</a></li>
-								<li class="footer_list_item"><a href="#">FAQ</a></li>
-								<li class="footer_list_item"><a href="#">Community</a></li>
-								<li class="footer_list_item"><a href="#">Campus Pictures</a></li>
-								<li class="footer_list_item"><a href="#">Tuitions</a></li>
+								<li class="footer_list_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs">Facebook</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 1</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 2</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 3</a></li>
 							</ul>
 						</div>
 					</div>
