--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/courses.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/courses.html
@@ -52,7 +52,7 @@
 		</div>
 
 	</header>
-	
+
 	<!-- Menu -->
 	<div class="menu_container menu_mm">
 
@@ -74,7 +74,7 @@
 				</ul>
 
 				<!-- Menu Social -->
-				
+
 				<div class="menu_social_container menu_mm">
 					<ul class="menu_social menu_mm">
 						<li class="menu_social_item menu_mm"><a href="#"><i class="fab fa-pinterest"></i></a></li>
@@ -91,7 +91,7 @@
 		</div>
 
 	</div>
-	
+
 	<!-- Home -->
 
 	<div class="home">
@@ -116,7 +116,7 @@
 			</div>
 
 			<div class="row course_boxes">
-				
+
 				<!-- Popular Course Item -->
 				<div class="col-lg-4 course_box">
 					<div class="card">
@@ -280,14 +280,14 @@
 				</div>
 
 			</div>
-		</div>		
+		</div>
 	</div>
 
 	<!-- Footer -->
 
 	<footer class="footer">
 		<div class="container">
-			
+
 			<!-- Newsletter -->
 
 			<div class="newsletter">
@@ -352,14 +352,14 @@
 					<!-- Footer Column - Usefull Links -->
 
 					<div class="col-lg-3 footer_col">
-						<div class="footer_column_title">Usefull Links</div>
+						<div class="footer_column_title">Enlaces Externos</div>
 						<div class="footer_column_content">
 							<ul>
 								<li class="footer_list_item"><a href="#">Testimonials</a></li>
-								<li class="footer_list_item"><a href="#">FAQ</a></li>
-								<li class="footer_list_item"><a href="#">Community</a></li>
-								<li class="footer_list_item"><a href="#">Campus Pictures</a></li>
-								<li class="footer_list_item"><a href="#">Tuitions</a></li>
+								<li class="footer_list_item"><a href="https://www.facebook.com/Colegio-del-Mayab-AC-1018589798154863/?ref=br_rs">Facebook</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 1</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 2</a></li>
+								<li class="footer_list_item"><a href="#">Espacio 3</a></li>
 							</ul>
 						</div>
 					</div>
