Nav bar actualizado contact.html

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
@@ -22,7 +22,7 @@
 			<!-- Logo -->
 			<div class="logo_container">
 				<div class="logo">
-					<img src="images/logo.png" alt="">
+					<img src="images/logo1.png" alt="">
 					<span>course</span>
 				</div>
 			</div>
@@ -31,12 +31,9 @@
 			<nav class="main_nav_container">
 				<div class="main_nav">
 					<ul class="main_nav_list">
-						<li class="main_nav_item"><a href="index.html">home</a></li>
-						<li class="main_nav_item"><a href="#">about us</a></li>
-						<li class="main_nav_item"><a href="courses.html">courses</a></li>
-						<li class="main_nav_item"><a href="elements.html">elements</a></li>
-						<li class="main_nav_item"><a href="news.html">news</a></li>
-						<li class="main_nav_item"><a href="#">contact</a></li>
+						<li class="main_nav_item"><a href="index.html">Inicio</a></li>
+						<li class="main_nav_item"><a href="#">Acerca de nosotros</a></li>
+
 					</ul>
 				</div>
 			</nav>
