--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -36,7 +36,7 @@
 					<ul class="main_nav_list">
 						<li class="main_nav_item"><a href="#">Inicio</a></li>
 						<li class="main_nav_item"><a href="#">Acerca de nosotros</a></li>
-						<li class="main_nav_item"><a href="courses.html">courses</a></li>
+						<li class="main_nav_item"><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
