Actualización enlazando paginas

--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/contact.html
@@ -32,7 +32,7 @@
 				<div class="main_nav">
 					<ul class="main_nav_list">
 						<li class="main_nav_item"><a href="index.html">Inicio</a></li>
-						<li class="main_nav_item"><a href="#">Acerca de nosotros</a></li>
+						<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
 
 					</ul>
 				</div>
