--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Plantilla Escuela HTML/index.html
@@ -33,8 +33,9 @@
 			<!-- Main Navigation -->
 			<nav class="main_nav_container">
 				<div class="main_nav">
-					<ul class="main_nav_list">						<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
-						<li class="main_nav_item"><a href="courses.html">courses</a></li>
+					<ul class="main_nav_list">
+						<li class="main_nav_item"><a href="nosotros.html">Acerca de nosotros</a></li>
+						<li class="main_nav_item"><a href="contact.html">Contactanos</a></li>
 
 					</ul>
 				</div>
