--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
@@ -42,7 +42,7 @@
             </div><!-- navbar-header -->
         <div id="navbar" class="navbar-collapse collapse">
             <div class="hidden-xs" id="logo"><a href="#header">
-                <img src="img/LOGO.jpg" alt="">
+                <img src="img/LOGO.png" alt="">
             </a></div>
 
             <ul class="nav navbar-nav navbar-right">
@@ -246,45 +246,7 @@
 
 
 
-    <div id="chefs" class="parallax pricing">
-        <div class="container inner">
 
-            <h2 class="section-title text-center">Our Chefs</h2>
-            <p class="lead main text-center">There is no sincerer love than the love of food!</p>
-
-            <div class="row text-center chefs">
-                <div class="col-sm-4">
-                    <div class="col-wrapper">
-                        <div class="icon-wrapper">
-                            <img src="img/chefs/1.jpg">
-                        </div>
-                        <h3>BOLA</h3>
-                        <p>Vivamus sagittis lacuson augue laoreet rutrum faucibus dolor auctor. Cras mattis consectetur purus sit amet fermentum ultricies vehicula.</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="col-wrapper">
-                        <div class="icon-wrapper">
-                            <img src="img/chefs/3.jpg">
-                        </div>
-                        <h3>DILDONSON</h3>
-                        <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cum sociis natoque penatibus et magnis dis parturient monte nascetur ultricies vehicula. </p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="col-wrapper">
-                        <div class="icon-wrapper">
-                            <img src="img/chefs/2.jpg">
-                        </div>
-                        <h3>DONATHELO</h3>
-                        <p>Curabitur blandit matti tempus porttitor. Donec id elit non mi porta ut gravida at eget metus. Consectetur adipiscing elit ultricies vehicula.</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-    </div><!-- /#chefs -->
 
 
     <footer id="footer" class="dark-wrapper">
