carpeta de oscar
intento de creacion de carpeta de oscar porque no le permite crearle en su pc

--- a/TopicosAvanzados19A/public_html/Ronal_Garcia/programa05.html
+++ b/TopicosAvanzados19A/public_html/Ronal_Garcia/programa05.html
@@ -6,12 +6,15 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        
-        <script>
-            $(document).ready(function(){
-                $('#tableExample')
-            })
-            </script>
+<script type=text/javascript" src= "https://code.jquery.com/jquery-3.3.1.js"></scrip>
+<script type=text/javascript" src= "https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"> < /scrip>
+<link type=text/css" href= "https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"></link>
+<script>
+<script>
+$(document).ready(function(){
+            $('#tableExample')
+})
+</script>
             
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
